# ml-experiment-definition

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  local_tests.sh  pyproject.toml
.github/workflows/: benchmark.yml  pr_benchmark.yml  test.yml
ml_experiment/: DefinitionPart.py  ExperimentDefinition.py  Scheduler.py  definition_part.py  experiment_definition.py  scheduler.py
ml_experiment/_utils/: maybe.py  path.py  sqlite.py
ml_experiment/metadata/: MetadataTable.py  MetadataTableRegistry.py  metadata_table.py  metadata_table_registry.py
tests/: test_DefinitionPart.py  test_ExperimentDefinition.py  test_generate_configurations.py
tests/acceptance/: my_experiment.py  test_acceptance.py  test_softmaxAC_mc.py
tests/definition_part/: test_generate_configurations.py
tests/metadata/: test_MetadataTableRegistry.py
