[tool]
[tool.setuptools.packages.find]
where = ["."]  # list of folders that contain the packages (["."] by default)
include = ["ml_experiment*"]  # package names should match these glob patterns (["*"] by default)

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.0.0"
tag_format = "$version"
version_files = ["pyproject.toml"]

[tool.ruff.lint]
select = ['F', 'E', 'W', 'B']
ignore = ['E501', 'E701', 'B023']

[tool.pyright]
include = ['ml_experiment']
venvPath = '.'
venv = '.venv'
typeCheckingMode = 'standard'
useLibraryCodeForTypes = true

[project]
name = "ml-experiment-definition"
version = "0.0.0"
description = ""
authors = [
    {name = "Parham Panahi", email = "parham1@ualberta.ca"},
    {name = "Andy Patterson", email = "ap3@ualberta.ca"},
]
dependencies = []
requires-python = ">=3.11,<3.13"
readme = "README.md"
license = {text = "MIT"}

classifiers = [
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

[project.optional-dependencies]
dev = [
    "pip",
    "ruff",
    "pytest",
    "pytest-cov",
    "pyright",
    "commitizen",
    "pre-commit",
]
